/*
 * Teragrep Buffer Library for Java
 * Copyright (C) 2026 Suomen Kanuuna Oy
 *
 * This program is free software: you can redistribute it and/or modify
 * it under the terms of the GNU Affero General Public License as published by
 * the Free Software Foundation, either version 3 of the License, or
 * (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU Affero General Public License for more details.
 *
 * You should have received a copy of the GNU Affero General Public License
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.
 *
 *
 * Additional permission under GNU Affero General Public License version 3
 * section 7
 *
 * If you modify this Program, or any covered work, by linking or combining it
 * with other code, such other code is not for that reason alone subject to any
 * of the requirements of the GNU Affero GPL version 3 as long as this Program
 * is the same Program as licensed from Suomen Kanuuna Oy without any additional
 * modifications.
 *
 * Supplemented terms under GNU Affero General Public License version 3
 * section 7
 *
 * Origin of the software must be attributed to Suomen Kanuuna Oy. Any modified
 * versions must be marked as "Modified version of" The Program.
 *
 * Names of the licensors and authors may not be used for publicity purposes.
 *
 * No rights are granted for use of trade names, trademarks, or service marks
 * which are in The Program if any.
 *
 * Licensee must indemnify licensors and authors for any liability that these
 * contractual assumptions impose on licensors and authors.
 *
 * To the extent this program is licensed as part of the Commercial versions of
 * Teragrep, the applicable Commercial License may apply to this file if you as
 * a licensee so wish it.
 */
package com.teragrep.buf_01.buffer.pool;

import com.teragrep.buf_01.buffer.lease.OpenableLease;
import com.teragrep.poj_01.pool.Pool;

import java.lang.foreign.MemorySegment;
import java.util.ArrayList;
import java.util.List;
import java.util.Objects;

// spotless:off
/**
 * @class LeaseMultiGet
 * @brief Allows returning multiple OpenableLeases for the specified amount of bytes.
 * @responsibilities
 * - Provides enough OpenableLeases to cover the requested amount of bytes
 * @collaborators
 * - MultiGet
 * - Pool
 * @startuml
 * interface MultiGet
 * interface Pool
 * class LeaseMultiGet {
 * + get(bytesCount);
 * }
 * LeaseMultiGet <|-- MultiGet : implements
 * LeaseMultiGet --> Pool : retrieves Leases from
 * note right of LeaseMultiGet
 * Responsibilities:
 * - Provides enough OpenableLeases to cover the requested amount of bytes
 * Collaborators:
 * - MultiGet
 * - Pool
 * end note
 * @enduml
 */
// spotless:on
public final class LeaseMultiGet implements MultiGet<OpenableLease<MemorySegment>> {

    private final Pool<OpenableLease<MemorySegment>> leasePool;

    public LeaseMultiGet(final Pool<OpenableLease<MemorySegment>> leasePool) {
        this.leasePool = leasePool;
    }

    @Override
    public List<OpenableLease<MemorySegment>> get(final long bytesCount) {
        long currentSize = 0;
        final List<OpenableLease<MemorySegment>> leases = new ArrayList<>();
        while (currentSize < bytesCount) {
            final OpenableLease<MemorySegment> lease = leasePool.get();
            if (lease.isStub()) {
                throw new IllegalStateException("Pool supplied a stub lease!");
            }
            leases.add(lease);
            currentSize += lease.leasedObject().byteSize();
        }
        return leases;
    }

    @Override
    public boolean equals(final Object o) {
        if (o == null || getClass() != o.getClass()) {
            return false;
        }
        final LeaseMultiGet that = (LeaseMultiGet) o;
        return Objects.equals(leasePool, that.leasePool);
    }

    @Override
    public int hashCode() {
        return Objects.hashCode(leasePool);
    }
}
